tests/textual/error/tailList-no-force.uplc
(program 0.0.0 [(builtin tailList) (con list(integer) [ 1, 2, 3 ])])